examples/errors/syntax07.cpp
#include <stdio.h>

int main()
{
	printf("132",,1,2);
    return 0;
}

